--- a/winner/index.html
+++ b/winner/index.html
@@ -343,7 +343,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/prosimplixity.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Constuction &amp; Building</a></h3>
+	    					<h3><a href="#">Construction &amp; Building</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
@@ -531,7 +531,7 @@
 
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-4 p-md-5 contact-form">
+            <form action="#" method="POST" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name">
               </div>
